# Chat_Bot

./: .env  .gitignore  copper-triumph-457514-u3-eabe6b5b545b.json  main.ipynb  main.py
Front-end/my-app/: package-lock.json  package.json
Front-end/my-app/src/: App.css  App.js  home.css  home.js  index.js  login.css  login.js
app/: .env.sample  .gitignore  chatbot.db  main.py  pyproject.toml  response.py
app/database/: database.py  database2.py
app/model/: model.py  schema.py
app/router/: chatrouter.py  router.py
app/service/: auth.py  chat_service.py  encrypt_service.py
app/storage/: model.py  storage.py
app/utils/: password.py  seralise.py
model_index/: index.faiss  index.pkl
react/webpage2/: index.css  index.html
ui_/: index.css  index.html  index.js
webpage/: index.css  index.html  index.js
