[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.11.18",
    "aiosignal==1.3.2",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "appnope==0.1.4",
    "asttokens==3.0.0",
    "attrs==25.3.0",
    "bottleneck==1.4.2",
    "cachetools==5.5.2",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "comm==0.2.2",
    "cryptography>=45.0.2",
    "dataclasses-json==0.6.7",
    "debugpy==1.8.14",
    "decorator==5.2.1",
    "distro==1.9.0",
    "docstring-parser==0.16",
    "dotenv==0.9.9",
    "executing==2.2.0",
    "faiss-cpu==1.10.0",
    "fastapi==0.115.12",
    "filelock==3.18.0",
    "frozenlist==1.6.0",
    "fsspec==2025.3.2",
    "google-api-core==2.25.0rc0",
    "google-auth==2.39.0",
    "google-cloud-aiplatform==1.90.0",
    "google-cloud-bigquery==3.31.0",
    "google-cloud-core==2.4.3",
    "google-cloud-resource-manager==1.14.2",
    "google-crc32c==1.7.1",
    "google-genai==1.12.1",
    "google-resumable-media==2.7.2",
    "googleapis-common-protos==1.70.0",
    "groq==0.23.1",
    "grpc-google-iam-v1==0.14.2",
    "grpcio==1.71.0",
    "grpcio-status==1.71.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "httpx-sse==0.4.0",
    "huggingface-hub==0.30.2",
    "idna==3.10",
    "ipykernel==6.29.5",
    "ipython==9.2.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jupyter-client==8.6.3",
    "jupyter-core==5.7.2",
    "langchain==0.3.24",
    "langchain-community==0.3.22",
    "langchain-core==0.3.56",
    "langchain-google-vertexai==2.0.21",
    "langchain-text-splitters==0.3.8",
    "langsmith==0.3.37",
    "marshmallow==3.26.1",
    "matplotlib-inline==0.1.7",
    "multidict==6.4.3",
    "mypy-extensions==1.1.0",
    "nest-asyncio==1.6.0",
    "numexpr==2.10.2",
    "numpy==2.2.5",
    "ollama==0.4.8",
    "orjson==3.10.16",
    "packaging==24.2",
    "parso==0.8.4",
    "pexpect==4.9.0",
    "platformdirs==4.3.7",
    "prompt-toolkit==3.0.51",
    "propcache==0.3.1",
    "proto-plus==1.26.1",
    "protobuf==5.29.4",
    "psutil==7.0.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pyarrow==19.0.1",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pydantic==2.11.3",
    "pydantic-core==2.33.1",
    "pydantic-settings==2.9.1",
    "pygments==2.19.1",
    "pymongo>=4.13.0",
    "pypdf==5.4.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "python-multipart==0.0.20",
    "pyyaml==6.0.2",
    "pyzmq==26.4.0",
    "requests==2.32.3",
    "requests-toolbelt==1.0.0",
    "rsa==4.9.1",
    "shapely==2.1.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.40",
    "stack-data==0.6.3",
    "starlette==0.46.2",
    "tenacity==9.1.2",
    "tornado==6.4.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "typing-extensions==4.13.2",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.0",
    "urllib3==2.4.0",
    "uvicorn==0.34.2",
    "validators==0.34.0",
    "wcwidth==0.2.13",
    "websockets==15.0.1",
    "yarl==1.20.0",
    "zstandard==0.23.0",
]
